# solwear

./: .gitignore  404.html  CNAME  README.md  UPDATE_LOG.md  index.html  index.txt
firmware/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  main_prompt.txt  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/components/hal_battery/: CMakeLists.txt  hal_battery.c  hal_battery.h
firmware/components/hal_buttons/: CMakeLists.txt  hal_buttons.c  hal_buttons.h
firmware/components/hal_nfc/: CMakeLists.txt  hal_nfc.c  hal_nfc.h
firmware/components/st7789/: CMakeLists.txt  st7789.c  st7789.h
firmware/components/ui_core/: CMakeLists.txt  ui_draw.c  ui_draw.h  ui_font.c  ui_font.h
firmware/components/wallet/: CMakeLists.txt  crypto.c  crypto.h  wallet.c  wallet.h
firmware/data/: settings.json  wallet.json
firmware/docs/: MENTOR_OPENSPEC_PROMPTS.md  bringup-notes.md  firmware-protocol.md  hardware-port-contract.md
firmware/include/: config.h
firmware/main/: CMakeLists.txt  config.h  main.c  os_clock.c  os_events.c  ui_roulette.c  ui_roulette.h
firmware/src/: battery.rs  buttons.rs  display.rs  main.cpp  main.rs  nfc.rs  os.rs  protocol.rs  wallet.rs
firmware/src/apps/: app_alarm.cpp  app_alarm.h  app_charging.cpp  app_charging.h  app_game.cpp  app_game.h  app_health.cpp  app_health.h  app_home.cpp  app_home.h  app_nfc.cpp  app_nfc.h  app_settings.cpp  app_settings.h  app_stats.cpp  app_stats.h  app_wallet.cpp  app_wallet.h  app_watchface.cpp  app_watchface.h
firmware/src/assets/: icons.h  sounds.h  wallpapers.h
firmware/src/core/: app_framework.cpp  app_framework.h  event_system.cpp  event_system.h  screen_manager.cpp  screen_manager.h  storage.cpp  storage.h  system_clock.cpp  system_clock.h  timer_manager.cpp  timer_manager.h
firmware/src/hal/: hal_battery.cpp  hal_battery.h  hal_buzzer.cpp  hal_buzzer.h  hal_display.cpp  hal_display.h  hal_eink.cpp  hal_eink.h  hal_imu.cpp  hal_imu.h  hal_nfc.cpp  hal_nfc.h  hal_power.cpp  hal_power.h  hal_thermal.cpp  hal_thermal.h  hal_touch.cpp  hal_touch.h
firmware/src/ui/: qr_display.cpp  qr_display.h  status_bar.cpp  status_bar.h  ui_common.cpp  ui_common.h
firmware/tools/: img2rgb565.py
firmware/tools/waveshare_rp2040_touch_169_code/RP2040-Touch-LCD-1.69-Code/Arduino/RP2040-Touch-LCD-1in69/: DEV_Config.cpp  DEV_Config.h  GUI_Paint.cpp  LCD_1in69.cpp  LCD_Test.h  RP2040-Touch-LCD-1in69.ino  (+1 more)
firmware/tools/waveshare_rp2040_touch_169_code/RP2040-Touch-LCD-1.69-Code/Python/: RP2040_Touch_LCD_1.69.py
service-tool/: .gitignore  Cargo.toml  LICENSE  README.md  build.bat  index.html  main.py  package.json  requirements.txt  run.bat  tsconfig.json
service-tool/core/: device_state.py  log_parser.py  prototype_profiles.py  serial_reader.py
service-tool/crates/solwear-st-cli/: Cargo.toml
service-tool/crates/solwear-st-cli/src/: main.rs
service-tool/crates/solwear-st-core/: Cargo.toml
service-tool/crates/solwear-st-core/src/: device.rs  flash.rs  lib.rs  protocol.rs  serial.rs
service-tool/docs/: verification.md
service-tool/src-tauri/: Cargo.toml  tauri.conf.json
service-tool/src-tauri/src/: lib.rs  main.rs
service-tool/ui/: app_window.py  main.tsx  styles.css  tab_console.py  tab_control.py  tab_firmware.py  tab_settings.py  tab_status.py  theme.py
(+153 files in other folders)
