[package]
name = "solwear-os"
version = "0.2.0-rust.0"
edition = "2021"
resolver = "2"

[features]
default = ["host-sim"]
host-sim = []
esp-idf = ["dep:esp-idf-hal"]

[dependencies]
esp-idf-hal = { version = "0.46", optional = true }

[build-dependencies]
embuild = "0.33"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "global"
esp_idf_version = "v5.3.3"
esp_idf_sdkconfig = "sdkconfig.defaults"
esp_idf_components = [
    "main",
    "pthread",
    "esp_timer",
    "esp_driver_gpio",
    "esp_driver_spi",
    "esp_driver_i2c",
    "esp_driver_uart",
    "esp_adc",
    "esp_lcd",
    "nvs_flash",
    "spiffs",
]
